# simepy

./: README.md  pyproject.toml  setup.cfg
.github/workflows/: cd.yml  ci.yml
example_scripts/: extract_meta_data.py  extract_scan_data.py
simepy/: extract_meta_data.py  extract_scans.py
spectrum_data/: extract_meta_data.py  extract_scans.py
tests/: test_spectrum_data.py
