[tool.poetry]
name = "spectrum_data"
version = "0.1.0"
description = ""
authors = ["MKoesters <17874544+MKoesters@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pymzml = "2.5.2"
pydantic = "^1.10.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^23.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
