[tool.poetry]
name = "simepy"
version = "0.1.0"
description = ""
authors = ["Gavain Sweetman, Manuel Kösters, Artyom Vlasov, Tristan Ranff, Christian Fufezan"]

[tool.poetry-dynamic-versioning]
enable = true

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
pymzml = "2.5.2"
pydantic = "^1.10.7"
pandas = "^1.5.3"

[tool.poetry.dev-dependencies]
black = "^23.3.0"
tox = "^4.4.8"
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.tox]
legacy_tox_ini = """

[tox]
envlist = py38,py39
isolated_build = True

[testenv]
allowlist_externals = poetry
commands =
    poetry install -v
    poetry run pytest tests {posargs}
"""

[tool.pytest.ini_options]
norecursedirs = "to_be_fixed_*"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
