[metadata]
name = ursgal
description = tba
long_description = tba
author = tba
license = tba
classifier = 
     Development Status :: 4 - Beta
     Environment :: Console
     Intended Audience :: Education
     Intended Audience :: Science/Research
     Intended Audience :: Developers
     License :: OSI Approved :: MIT License
     Operating System :: MacOS :: MacOS X
     Operating System :: Microsoft :: Windows
     Operating System :: POSIX
     Operating System :: POSIX :: SunOS/Solaris
     Operating System :: Unix
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
     Topic :: Scientific/Engineering :: Bio-Informatics
     Topic :: Scientific/Engineering :: Chemistry
     Topic :: Scientific/Engineering :: Medical Science Apps

[options]
packages = find_namespace:

[egg_info]
egg_base = .
